# evox

./: .env  .env.example  .gitignore  README.md  docker-compose.yml  prestart.sh  pyproject.toml  start.sh
.github/workflows/: backend.yml
alembic/: env.py
alembic/versions/: 17e84c52321f_initial_schema_message.py  ddb5d89292c1_initial_schema_message.py
app/: main.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: messages.py
app/core/: config.py  security.py
app/db/: base.py
app/exceptions/: message.py
app/models/: message.py
app/schemas/: __init__.py  message.py
app/services/: __init__.py  message_service.py
app/tests/: conftest.py
app/tests/api/api_v1/: test_messages.py
app/tests/services/: test_messages.py
app/tests/utils/: __init__.py  message.py  utils.py
app/validators/: message.py
k8s/: backend-deployment.yaml  backend-service.yaml  db-deployment.yaml  db-service.yaml  ingress.yaml  postgres-data-persistentvolumeclaim.yaml
scripts/: format-imports.sh  format.sh  lint.sh
