[tool.poetry]
name = "evox"
version = "0.1.0"
description = ""
authors = ["Bartłomiej Rasztabiga <contact@rasztabiga.me>"]

[tool.poetry.dependencies]
python = "^3.7"
uvicorn = "0.13.4"
fastapi = "0.65.1"
python-multipart = "0.0.5"
requests = "2.23.0"
tenacity = "7.0.0"
pydantic = "1.8.2"
gunicorn = "20.1.0"
jinja2 = "3.0.1"
psycopg2-binary = "2.8.6"
alembic = "1.6.3"
sqlalchemy = "1.4.15"
python-dotenv = "0.17.1"
starlette = "0.14.2"
h11 = "0.12.0"
email-validator = "1.1.2"

[tool.poetry.dev-dependencies]
mypy = "0.812"
black = "21.5b1"
isort = "5.8.0"
autoflake = "1.4"
flake8 = "3.9.2"
pytest = "6.2.4"
pytest-cov = "2.12.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 90

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

